// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricVisComponent coloring by palette percent-based should set correct data bounds with breakdown-by and max dimension 1`] = `
Array [
  Object {
    "max": 28.984375,
    "min": 0,
    "value": 13.6328125,
  },
  Object {
    "max": 28.984375,
    "min": 0,
    "value": 13.639539930555555,
  },
  Object {
    "max": 25.984375,
    "min": 0,
    "value": 13.34375,
  },
  Object {
    "max": 25.784375,
    "min": 0,
    "value": 13.4921875,
  },
  Object {
    "max": 25.348011363636363,
    "min": 0,
    "value": 13.34375,
  },
  Object {
    "max": 24.984375,
    "min": 0,
    "value": 13.242513020833334,
  },
]
`;

exports[`MetricVisComponent coloring by palette percent-based should set correct data bounds with just breakdown-by dimension 1`] = `
Array [
  Object {
    "max": 13.639539930555555,
    "min": 13.242513020833334,
    "value": 13.6328125,
  },
  Object {
    "max": 13.639539930555555,
    "min": 13.242513020833334,
    "value": 13.639539930555555,
  },
  Object {
    "max": 13.639539930555555,
    "min": 13.242513020833334,
    "value": 13.34375,
  },
  Object {
    "max": 13.639539930555555,
    "min": 13.242513020833334,
    "value": 13.4921875,
  },
  Object {
    "max": 13.639539930555555,
    "min": 13.242513020833334,
    "value": 13.34375,
  },
  Object {
    "max": 13.639539930555555,
    "min": 13.242513020833334,
    "value": 13.242513020833334,
  },
]
`;

exports[`MetricVisComponent coloring by palette percent-based should set correct data bounds with just max dimension 1`] = `
Array [
  Object {
    "max": 28.984375,
    "min": 0,
    "value": 13.6328125,
  },
]
`;
